BISERVER-12183 Starting BA server from tomcat (as service) fail
service scripts was added